# gelly-installer

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  build_as_ci.ps1  install_dependencies.ps1
.github/workflows/: create_release.yml
cmake/: CreateReleaseArtifact.cmake
cmake/modules/: ExtraFiles.cmake  GetCurrentVersion.cmake
src/: curl.cpp  curl.hpp  gui.cpp  gui.hpp  main.cpp  version.hpp.in  window.cpp  window.hpp
src/app/: config.cpp  config.hpp  registry.cpp  registry.hpp  relocate-installation.cpp  relocate-installation.hpp  setup-uri-handler.cpp  setup-uri-handler.hpp
src/gui/: main-installer-window.cpp  main-installer-window.hpp
src/gui/popups/: fatal-error.cpp  outdated-gelly.cpp  popup.cpp  popup.hpp  uninstall-gelly.cpp
src/helpers/: clay-dynamic-string.hpp  detect-elevation.cpp  detect-elevation.hpp  find-app-data.cpp  find-app-data.hpp  find-gmod-directory.cpp  find-gmod-directory.hpp  find-steam-directory.cpp  find-steam-directory.hpp  launch-gmod.cpp  launch-gmod.hpp  launch-installer.cpp  launch-installer.hpp  parse-version.cpp  parse-version.hpp  release-markdown.cpp  release-markdown.hpp
src/install/: detect-gelly-installation.cpp  detect-gelly-installation.hpp  get-latest-gelly.cpp  get-latest-gelly.hpp  install-gelly.cpp  install-gelly.hpp  uninstall-gelly.cpp  uninstall-gelly.hpp
src/logging/: crash-logging.cpp  crash-logging.hpp  log.cpp  log.hpp
src/renderer/: clay_sdl2_renderer.cpp  clay_sdl2_renderer.hpp
